--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
             <div class="flex justify-center space-x-6 rtl:space-x-reverse mb-4">
                 <a href="#" class="hover:text-white transition-colors duration-200">الرئيسية</a>
                 <a href="#" class="hover:text-white transition-colors duration-200">الوظائف المتاحة</a>
-                <a href="available_employees.html" class="hover:text-white transition-colors duration-200">الموظفون المتاحون</a>
+                <a href="employee_listing_page.html" class="hover:text-white transition-colors duration-200">الموظفون المتاحون</a>
                 <a href="#" class="hover:text-white transition-colors duration-200">من نحن</a>
                 <a href="#" class="hover:text-white transition-colors duration-200">اتصل بنا</a>
             </div>
