--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
                         <li><a href="index.html" class="text-gray-400 hover:text-white">الرئيسية</a></li>
                         <li><a href="job_listing_page.html" class="text-gray-400 hover:text-white">الوظائف</a></li>
                         <li><a href="employee_listing_page.html" class="text-gray-400 hover:text-white">البحث عن موظفين</a></li>
-                        <li><a href="#
-                        " class="text-gray-400 hover:text-white">المدونة</a></li>
+                        <li><a href="job_application_page.html" class="text-gray-400 hover:text-white">تسجيل موظف</a></li>
                     </ul>
                 </div>
                 
