--- a/jop_posting_page.html
+++ b/jop_posting_page.html
@@ -1,143 +1,1 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>إضافة وظيفة جديدة</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      direction: rtl;
-      padding: 15px;
-      background-color: #f9f9f9;
-      margin: 0;
-      box-sizing: border-box;
-    }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 25px;
-      color: #007BFF;
-      font-size: 24px;
-    }
-
-    form {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 480px;
-      margin: 0 auto;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-      font-weight: bold;
-      font-size: 16px;
-      color: #333;
-    }
-
-    input, textarea, button {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-      margin-bottom: 18px;
-      font-family: inherit;
-      resize: vertical;
-    }
-
-    button {
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
-    /* تحسين العرض على الشاشات الصغيرة */
-    @media (max-width: 500px) {
-      form {
-        padding: 15px;
-        max-width: 100%;
-      }
-      h1 {
-        font-size: 20px;
-      }
-      input, textarea, button {
-        font-size: 14px;
-        padding: 10px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h1>إضافة وظيفة جديدة</h1>
-  <form id="jobForm">
-    <label for="title">عنوان الوظيفة</label>
-    <input type="text" id="title" required />
-
-    <label for="location">الموقع</label>
-    <input type="text" id="location" required />
-
-    <label for="duration">مدة العمل</label>
-    <input type="text" id="duration" required />
-
-    <label for="salary">الراتب</label>
-    <input type="text" id="salary" required />
-
-    <label for="description">وصف الوظيفة</label>
-    <textarea id="description" rows="4" required></textarea>
-
-    <button type="submit">حفظ الوظيفة</button>
-  </form>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
-      authDomain: "shaglni-c64c0.firebaseapp.com",
-      projectId: "shaglni-c64c0",
-      storageBucket: "shaglni-c64c0.appspot.com",
-      messagingSenderId: "768887356636",
-      appId: "1:768887356636:web:8a697d04b860eba89c8819",
-      measurementId: "G-QNRW412GZD"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    const form = document.getElementById("jobForm");
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const job = {
-        title: form.title.value.trim(),
-        location: form.location.value.trim(),
-        duration: form.duration.value.trim(),
-        salary: form.salary.value.trim(),
-        description: form.description.value.trim()
-      };
-
-      try {
-        await addDoc(collection(db, "jobs"), job);
-        alert("تم حفظ الوظيفة بنجاح!");
-        form.reset();
-        window.location.href = "jobs.html";
-      } catch (error) {
-        alert("حدث خطأ أثناء الحفظ: " + error.message);
-      }
-    });
-  </script>
-</body>
-</html>
+اضافة وظيفة
