--- a/job_application_page.html
+++ b/job_application_page.html
@@ -109,7 +109,7 @@
                            class="w-full pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required>
                 </div>
                 <div class="mb-4">
-                    <label for="bio" class="block text-sm font-medium text-gray-700">نبذة شخصية</label>
+                    <label for="bio" class="block text-sm font-medium text-gray-700">نبذة وظيفية عنك</label>
                     <textarea id="bio" name="bio" rows="5" placeholder="اكتب نبذة مختصرة عنك وعن خبراتك"
                               class="w-full pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" required></textarea>
                 </div>
